# pofff

./: .gitignore  .pylintrc  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: CI.yml
docs/: Makefile  about.html  api.html  configuration_file.html  contributing.html  examples.html  genindex.html  index.html  installation.html  introduction.html  modules.html  objects.inv  output_folder.html  pofff.core.html  pofff.core.pofff.html  pofff.html  pofff.jobs.data.html  pofff.jobs.delete.html  pofff.jobs.html  pofff.jobs.metric.html  pofff.utils.html  pofff.utils.inputvalues.html  pofff.utils.mapproperties.html  pofff.utils.runs.html  pofff.utils.writefile.html  pofff.visualization.benchmark.html  pofff.visualization.error_table.html  pofff.visualization.everert.html  pofff.visualization.html  pofff.visualization.maps.html  pofff.visualization.sparse_values.html  py-modindex.html  related.html  search.html  searchindex.js
docs/_sources/: about.rst.txt  api.rst.txt  configuration_file.rst.txt  output_folder.rst.txt  pofff.jobs.data.rst.txt  pofff.jobs.delete.rst.txt  pofff.jobs.metric.rst.txt  pofff.utils.inputvalues.rst.txt  pofff.utils.mapproperties.rst.txt  pofff.utils.rst.txt  pofff.visualization.error_table.rst.txt  pofff.visualization.rst.txt
docs/text/: conf.py  contributing.rst  examples.rst  index.rst  installation.rst  introduction.rst  modules.rst  pofff.core.rst  (+10 more)
examples/: ert.toml  everest.toml  input.toml  single.toml  single1.toml  single2.toml
publication/: appendix.toml  everest_iter_1.toml  everest_iter_2.toml  everest_iter_3.toml  results.toml
tests/: test_0_main.py  test_1_everest.py  test_2_ert.py  test_3_benchmark.py  test_4_fair.py
(+100 files in other folders)
